# pretraining

./: .gitignore  README.md  pyproject.toml  requirements.txt  scaling.py
benchmarking/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
benchmarking/data/fred/: test.csv
benchmarking/humun_benchmark/: __main__.py  benchmark.py  generate.py  metrics.py  model.py  prompt.py
benchmarking/humun_benchmark/adhoc/: downloadGC.py
benchmarking/humun_benchmark/clients/: huggingface.py
benchmarking/humun_benchmark/interfaces/: huggingface.py
benchmarking/humun_benchmark/utils/: checks.py  errors.py  format.py  get_data.py  globals.py  log_config.py  parse.py  read.py  serialise.py  tasks.py
benchmarking/notebooks/: example.ipynb
benchmarking/scripts/: run.py
humun_econ_transformer/: train_sft.py
humun_econ_transformer/data/: __init__.py  datasets.py  fred_data.py  preprocess_fred_data.py
humun_econ_transformer/models/: model.py  utils.py
humun_econ_transformer/trainer/: __init__.py
humun_econ_transformer/utils/: utils.py
humun_econ_transformer/utils/deepspeed/: deepspeed.py
scripts/: process_fred_dataset.sh  slurm_train_sft.sh  slurm_train_sft_personal.sh  slurm_train_sft_personal_1b.sh  train_sft.sh  upload_gc.sh
training/: README.md  requirements.txt
training/humun_econ_transformer/: train_sft.py
training/humun_econ_transformer/data/: __init__.py  datasets.py  fred_data.py  preprocess_fred_data.py
training/humun_econ_transformer/models/: loss.py
training/scripts/: slurm_train_sft.sh  train_sft.sh
(+1 files in other folders)
