[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humun-benchmark"
description = "A benchmarking framework for LLMs on time-series based tasks."
version = "0.0.0"
readme = "README.md"
requires-python = ">3.9, <3.12"

authors = [
    {name = ""},
]
maintainers = [
    {name = "Aiden Lewington", email = "aidenlewington@gmail.com"},
]

dynamic = ["dependencies"]

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

